--- a/Back-End/pom.xml
+++ b/Back-End/pom.xml
@@ -67,6 +67,12 @@
 			<version>1.32.2</version>
 		</dependency>
         <!-- dependencies for unit tests -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
