--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/ncountry
 spring.datasource.username=root
 # this is for kevin db (I'm not using password)
-# spring.datasource.password=
-spring.datasource.password=root
+spring.datasource.password=
+# spring.datasource.password=root
 #DRIVER
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #FILES
