--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DATABASE
-spring.datasource.url=jdbc:mysql://localhost:3306/ncountry
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url={DATABASE_URL}
+spring.datasource.username={DATABASE_USERNAME}
+spring.datasource.password={DATABASE_PASSWORD}
 #DRIVER
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #FILES
