--- a/Back-End/Dockerfile
+++ b/Back-End/Dockerfile
@@ -10,4 +10,4 @@ RUN mvn clean package -DskipTests
 FROM openjdk:17.0.1-jdk-slim
 COPY --from=build /target/tuvivienda-0.0.1-SNAPSHOT.war java-app.war
 EXPOSE 8080
-ENTRYPOINT ["java","-war","java-app.war"]
+ENTRYPOINT ["java","-jar","java-app.war"]
