--- a/Back-End/Dockerfile
+++ b/Back-End/Dockerfile
@@ -2,7 +2,7 @@
 FROM maven:3.8.5-openjdk-17 AS build
 
 # Establecer el directorio de trabajo
-WORKDIR /app
+WORKDIR /Back-End
 
 # Copiar solo el archivo pom.xml para instalar las dependencias de Maven
 COPY pom.xml .
@@ -20,10 +20,10 @@ RUN mvn package -DskipTests
 FROM openjdk:17.0.1-jdk-slim
 
 # Copiar el archivo WAR generado desde la imagen de construcción al contenedor final
-COPY --from=build /app/target/tuvivienda-0.0.1-SNAPSHOT.war /app/java-app.war
+COPY --from=build /Back-End/target/tuvivienda-0.0.1-SNAPSHOT.war /Back-End/java-app.war
 
 # Exponer el puerto 8080 (ajusta el puerto según sea necesario)
 EXPOSE 8080
 
 # Comando de inicio para ejecutar la aplicación Java
-ENTRYPOINT ["java", "-jar", "/app/java-app.war"]
+ENTRYPOINT ["java", "-jar", "/Back-End/java-app.war"]
