--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.username={DATABASE_USERNAME}
 spring.datasource.password={DATABASE_PASSWORD}
 #DRIVER
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Configuración de Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #FILES
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
