--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DATABASE
-spring.datasource.url={DATABASE_URL}
-spring.datasource.username={DATABASE_USERNAME}
-spring.datasource.password={DATABASE_PASSWORD}
+spring.datasource.url=jdbc:mysql://root:rLRXMGJwqFqjWWKuwoejfSSOSwIyHdZM@viaduct.proxy.rlwy.net:49151/railway
+spring.datasource.username=root
+spring.datasource.password=rLRXMGJwqFqjWWKuwoejfSSOSwIyHdZM
 #DRIVER
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Configuración de Hibernate
